--- a/styles/index.css
+++ b/styles/index.css
@@ -10,7 +10,7 @@
 }
 
 a {
-    color: #5A6273
+    color: #5A6273;
 }
 
 body {
@@ -19,11 +19,14 @@ body {
     font-weight: 400;
     font-style: normal;
     background-color: #F2F2F2;
-    margin: 25px 50px;
+    margin: 0;
     display: flex;
     flex-direction: column;
-    height: 100vh;
-    justify-content: space-between;
+    min-height: 100vh;
+}
+
+header {
+    margin: 25px 50px; 
 }
 
 nav {
@@ -49,48 +52,46 @@ nav ul li {
     margin-right: 20px;
 }
 
-main {
-    padding: 10px 0 10px 0;
+.conteudo__topo {
     display: grid;
     gap: 10px;
     grid-template-columns: 3fr 2fr;
     grid-template-rows: 1fr 1fr;
     grid-template-areas: 
-    "titulo ofertas"
-    "loja ofertas";
-    flex-grow: 1;
+    "titulo ofertasAlgumas"
+    "loja ofertasAlgumas";
+    height: calc(92vh - 25px);
+    padding: 20px;
 }
 
-#conteudo__titulo {
+#topo__titulo {
     background-color: #E7F2BD;
     border-radius: 14px;
     padding: 14px;
     grid-area: titulo;
 }
 
-#conteudo__titulo h1 {
+#topo__titulo h1 {
     font-family: "Roboto", sans-serif;
     font-weight: 900;
     font-style: normal;
     font-size: 30pt;
 }
 
-#conteudo__titulo h3 {
+#topo__titulo h3 {
     font-family: "Archivo", sans-serif;
     font-optical-sizing: auto;
-    font-weight: <weight>;
+    font-weight: normal;
     font-style: normal;
-    font-variation-settings:
-      "wdth" 100;
 }
 
-#conteudo__loja {
+#topo__loja {
     display: flex;
     flex-direction: row;
     grid-area: loja;
 }
 
-#conteudo__loja div {
+#topo__loja div {
     font-family: "Roboto", sans-serif;
     font-weight: 900;
     font-style: normal;
@@ -105,14 +106,32 @@ main {
     margin: 0 5px;
 }
 
-#conteudo__ofertas {
+#topo__ofertasAlgumas {
     background-color: #99D959;
     border-radius: 14px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    grid-area: ofertas;
+    grid-area: ofertasAlgumas;
+}
+
+.conteudo__vitrine {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 20px;
+    padding: 20px;
+}
+
+.vitrine__categorias {
+    background-color: white;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 }
 
 footer {
@@ -120,4 +139,5 @@ footer {
     flex-direction: row;
     justify-content: flex-end;
     align-content: center;
+    margin: 25px 50px;
 }
