atualizacao dos scripts index, vitrine e listaProdutos

--- a/styles/index.css
+++ b/styles/index.css
@@ -106,7 +106,7 @@ nav ul li {
     margin: 0 5px;
 }
 
-#topo__ofertasAlgumas {
+#topo__feed {
     background-color: #99D959;
     border-radius: 14px;
     display: flex;
