--- a/styles/carrinho.css
+++ b/styles/carrinho.css
@@ -28,14 +28,6 @@ table td {
     height: 36px;
 }
 
-input::placeholder {
-    color: #FFFFFF;
-    font-family: "Roboto", sans-serif;
-    font-weight: 100;
-    font-style: normal;
-    font-size: 9pt;
-}
-
 body {
     font-family: "Roboto", sans-serif;
     background-color: #FFFFFF;
@@ -254,6 +246,14 @@ main {
     font-size: 12pt;
 }
 
+.desconto__input::placeholder {
+    color: #FFFFFF;
+    font-family: "Roboto", sans-serif;
+    font-weight: 100;
+    font-style: normal;
+    font-size: 9pt;
+}
+
 .desconto__input:focus {
     color: #FFFFFF;
     font-family: "Roboto", sans-serif;
@@ -417,4 +417,136 @@ footer {
     justify-content: flex-end;
     align-content: center;
     margin: 25px 50px;
+}
+
+.menu-sup__usuario li button {
+    background-color: #FFFFFF00;
+    cursor: pointer;
+    color: #2135A6;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 12pt;  
+}
+
+.container__acesso {
+    font-family: "Roboto", sans-serif;
+    font-style: normal;
+    display: none;
+}
+
+.container__acesso--exibir {
+    display: flex;
+}
+
+.acesso__planoDeFundo {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #FFFFFF90;
+    z-index: 999;
+    padding: 120px 240px;
+}
+
+.acesso__popUp {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    background-color: #F2F2F2;
+    width: 100%;
+    height: 100%;
+    border-radius: 24px;
+    position: relative;
+    z-index: 1000;
+    grid-template-areas:
+    "login cadastro";
+}
+
+.acesso__popUp button {
+    background-color: #4563BF;
+    padding: 5px 0;
+    width: 300px;
+    height: 36px;
+    border-radius: 12px;
+    align-items: center;
+    color: #FFFFFF;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 12pt;
+}
+
+.acesso__popUp button:hover {
+    background-color: #2135A6;
+}
+
+.acesso__login {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding: 120px 0;
+    border-top-left-radius: 24px;
+    border-bottom-left-radius: 24px;
+    grid-area: login;
+}
+
+.acesso__login form {
+    display: flex;
+    flex-direction: column;
+    row-gap: 15px;
+}
+
+.acesso__login input {
+    display: inline-block;
+    background-color: #F2F2F2;
+    width: 300px;
+    height: 36px;
+    border: 0;
+    border-bottom: 1px solid #4563BF;
+    outline: 0;
+    color: #4563BF;
+    font-family: "Roboto", sans-serif;
+    font-weight: 200;
+    font-style: normal;
+    font-size: 12pt;
+}
+
+.acesso__login input::placeholder {
+    color: #4563BF;
+}
+
+.acesso__login input:focus {
+    border-bottom: 2px solid #4563BF;
+}
+
+.acesso__cadastro {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #7999D9;
+    padding: 120px 0;
+    border-top-right-radius: 24px;
+    border-bottom-right-radius: 24px;
+    grid-area: cadastro;
+}
+
+.popUp__fechar {
+    background-color: #FFFFFF00;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    position: relative;
+    top: 12px;
+    left: calc(50% - 22px);
+    color: #4563BF;
+    font-family: "Roboto", sans-serif;
+    font-weight: 200;
+    font-style: normal;
+    font-size: 12pt;
+}
+
+.popUp__fechar:hover {
+    font-weight: 400;
 }
