--- a/styles/vitrine.css
+++ b/styles/vitrine.css
@@ -85,92 +85,142 @@ main {
     justify-content: center;
 }
 
-/* .conteudo__topo {
-    display: grid;
-    gap: 10px;
-    grid-template-columns: 3fr 2fr;
-    grid-template-rows: 1fr 1fr;
-    grid-template-areas: 
-    "titulo ofertasAlgumas"
-    "loja ofertasAlgumas";
-    height: calc(92vh - 25px);
-    padding: 20px;
-}
-
-#topo__titulo {
-    background-color: #E7F2BD;
-    border-radius: 14px;
-    padding: 14px;
-    grid-area: titulo;
-}
-
-#topo__titulo h1 {
-    font-family: "Roboto", sans-serif;
-    font-weight: 900;
-    font-style: normal;
-    font-size: 30pt;
-}
-
-#topo__titulo h3 {
-    font-family: "Archivo", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: normal;
-    font-style: normal;
-}
-
-#topo__loja {
-    display: flex;
-    flex-direction: row;
-    grid-area: loja;
-}
-
-#topo__loja div {
-    font-family: "Roboto", sans-serif;
-    font-weight: 900;
-    font-style: normal;
-    background-color: #CCF294;
-    border-radius: 14px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    flex-grow: 1;
-    flex-basis: 0;
-    margin: 0 5px;
-}
-
-#topo__feed {
-    background-color: #99D959;
-    border-radius: 14px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    grid-area: ofertasAlgumas;
-}
-
-.conteudo__vitrine {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    gap: 20px;
-    padding: 20px;
-}
-
-.vitrine__categorias {
-    background-color: white;
-    border-radius: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 20px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-} */
-
 footer {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
     align-content: center;
     margin: 25px 50px;
+}
+
+.menu-sup__usuario li button {
+    background-color: #FFFFFF00;
+    cursor: pointer;
+    color: #2135A6;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 12pt;  
+}
+
+.container__acesso {
+    font-family: "Roboto", sans-serif;
+    font-style: normal;
+    display: none;
+}
+
+.container__acesso--exibir {
+    display: flex;
+}
+
+.acesso__planoDeFundo {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #FFFFFF90;
+    z-index: 999;
+    padding: 120px 240px;
+}
+
+.acesso__popUp {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    background-color: #F2F2F2;
+    width: 100%;
+    height: 100%;
+    border-radius: 24px;
+    position: relative;
+    z-index: 1000;
+    grid-template-areas:
+    "login cadastro";
+}
+
+.acesso__popUp button {
+    background-color: #4563BF;
+    padding: 5px 0;
+    width: 300px;
+    height: 36px;
+    border-radius: 12px;
+    align-items: center;
+    color: #FFFFFF;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 12pt;
+}
+
+.acesso__popUp button:hover {
+    background-color: #2135A6;
+}
+
+.acesso__login {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding: 120px 0;
+    border-top-left-radius: 24px;
+    border-bottom-left-radius: 24px;
+    grid-area: login;
+}
+
+.acesso__login form {
+    display: flex;
+    flex-direction: column;
+    row-gap: 15px;
+}
+
+.acesso__login input {
+    display: inline-block;
+    background-color: #F2F2F2;
+    width: 300px;
+    height: 36px;
+    border: 0;
+    border-bottom: 1px solid #4563BF;
+    outline: 0;
+    color: #4563BF;
+    font-family: "Roboto", sans-serif;
+    font-weight: 200;
+    font-style: normal;
+    font-size: 12pt;
+}
+
+.acesso__login input::placeholder {
+    color: #4563BF;
+}
+
+.acesso__login input:focus {
+    border-bottom: 2px solid #4563BF;
+}
+
+.acesso__cadastro {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #7999D9;
+    padding: 120px 0;
+    border-top-right-radius: 24px;
+    border-bottom-right-radius: 24px;
+    grid-area: cadastro;
+}
+
+.popUp__fechar {
+    background-color: #FFFFFF00;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    position: relative;
+    top: 12px;
+    left: calc(50% - 22px);
+    color: #4563BF;
+    font-family: "Roboto", sans-serif;
+    font-weight: 200;
+    font-style: normal;
+    font-size: 12pt;
+}
+
+.popUp__fechar:hover {
+    font-weight: 400;
 }
