--- a/styles/cadastro.css
+++ b/styles/cadastro.css
@@ -6,28 +6,50 @@
     list-style: none;
     text-decoration: none;
     border-width: 0;
-}
-
-html {
-    height: 100%;
-    min-height: 100%;
-}
-
-button {
-    cursor: pointer;
+    text-decoration: none;
+    overflow: hidden;
 }
 
 a {
-    color: #000000;
+    color: #2135A6;
+}
+
+input {
+    display: inline-block;
+    width: 300px;
+    height: 36px;
+    border: 0;
+    outline: 0;
+    font-family: "Roboto", sans-serif;
+    font-weight: 200;
+    font-style: normal;
+    font-size: 12pt;
+    margin-bottom: 12px;
+}
+
+input:last-child {
+    margin-bottom: 0;
+}
+
+input:valid {
+    font-weight: 400;
+}
+
+input::placeholder {
+    font-weight: 200;
+}
+
+button:hover {
+    background-color: #2135A6;
 }
 
 body {
     background-color: #FFFFFF;
     margin: 0;
-    padding: 0 60px;
+    padding: 0;
     display: flex;
     flex-direction: column;
-    min-height: 100%;
+    min-height: 100vh;
     color: #2135A6;
     font-family: "Roboto", sans-serif;
     font-weight: 400;
@@ -35,7 +57,7 @@ body {
 }
 
 header {
-    margin: 24px 60px; 
+    margin: 25px 50px; 
 }
 
 nav {
@@ -62,145 +84,141 @@ nav ul li {
 }
 
 main {
-    padding: 24px 0;
     flex: 1;
+    padding: 0 60px;
 }
 
 .conteudo {
     display: grid;
-    grid-template-columns: 1fr 2fr;
-    grid-template-rows: auto 36px;
+    grid-template-rows: 40px auto 40px;
     column-gap: 60px;
     row-gap: 24px;
-    grid-template-areas: 
-    "imagens informacoes"
-    "imagens botoes";
+    grid-template-areas:
+    "titulo"
+    "formulario";
 }
 
-.conteudo__imagens {
-    flex-direction: column;
-    align-items: center;
-    grid-area: imagens;
+.conteudo__titulo {
+    grid-area: titulo;
 }
 
-.imagens__produto {
-    background-color: #7999D9;
-    width: 100%;
+.conteudo__formulario {
+    display: grid;
+    gap: 18px;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+    grid-template-areas:
+    "dadospessoais dadoslocalizacao"
+    "dadosacesso dadoslocalizacao"
+    "botaoCadastrar botaoCadastrar";
+    grid-area: formulario;
     height: 100%;
-    border-radius: 15px;
-    justify-self: center;
 }
 
-/* .imagens__relacionados {
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-    margin-top: 10px;
+.conteudo__formulario input {
+    width: 100%;
 }
 
-.imagens__relacionados li {
-    background-color: #CCF294;
-    display: flex;
-    flex-direction: row;
-    width: 93px;
-    height: 93px;
-    border-radius: 14px;
-} */
+.conteudo__formulario input:focus {
+    font-weight: 400;
+    border-bottom: 2px solid #4563BF;
+}
 
-.conteudo__infos {
+.conteudo__formulario div {
+    padding: 24px;
+    border-radius: 24px;
+}
+
+.formulario__dadosPessoais {
+    display: flex;
+    flex-direction: column;
     background-color: #F2F2F2;
-    border-radius: 15px;
-    padding: 15px;
-    align-items: center;
-    justify-content: center;
-    color: #000000;
-    grid-area: informacoes;
+    grid-area: dadospessoais;
 }
 
-.infos__principal h5 {
+.formulario__dadosPessoais input {
+    background-color: #F2F2F2;
+    border-bottom: 1px solid #4563BF;
+    color: #4563BF;
+}
+
+.formulario__dadosPessoais input::placeholder {
+    color: #2135A6;;
+}
+
+.formulario__dadosAcesso {
+    display: flex;
+    flex-direction: column;
+    background-color: #ADC0D9;
+    grid-area: dadosacesso;
+}
+
+.formulario__dadosAcesso div {
+    display: flex;
+    flex-direction: column;
+}
+
+.formulario__dadosAcesso input {
+    background-color: #ADC0D9;
+    border-bottom: 1px solid #4563BF;
+    color: #4563BF;
+}
+
+.formulario__dadosAcesso input::placeholder {
+    color: #2135A6;;
+}
+
+#formulario__alertaSenhaRepetir {
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+    font-size: 9pt;
+}
+
+.formulario__dadosLocalizacao {
+    display: flex;
+    flex-direction: column;
+    background-color: #7999D9;
+    grid-area: dadoslocalizacao;
+    align-self: stretch;
+    color: #FFFFFF; 
+}
+
+.formulario__dadosLocalizacao input {
+    border-bottom: 1px solid #FFFFFF;
+    background-color: #7999D9;
+    color: #FFFFFF; 
+}
+
+.formulario__dadosLocalizacao input:focus {
+    border-bottom: 2px solid #FFFFFF;
+}
+
+.formulario__dadosLocalizacao input::placeholder {
+    color: #FFFFFF;
+}
+
+#formulario__botaoCadastrar {
+    background-color: #4563BF;
+    grid-area: botaoCadastrar;
+}
+
+#formulario__botaoCadastrar {
+    background-color: #4563BF;
+    padding: 5px 0;
+    width: 100%;
+    height: 48px;
+    border-radius: 12px;
+    align-items: center;
+    color: #FFFFFF;
     font-family: "Roboto", sans-serif;
     font-weight: 100;
     font-style: normal;
     font-size: 12pt;
-    padding-bottom: 10px;
+    border: none;
 }
 
-#infos__nome {
-    font-family: "Roboto", sans-serif;
-    font-weight: 900;
-    font-style: normal;
-    font-size: 30pt;
-    padding-bottom: 20px;
-}
-
-#infos__descricao {
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 12pt;
-    padding-bottom: 20px;
-}
-
-#infos__preco {
-    font-family: "Roboto", sans-serif;
-    font-weight: 700;
-    font-style: normal;
-    font-size: 24pt;
-    padding-bottom: 20px;
-}
-
-.conteudo__botoes {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    height: 100%;
-    grid-area: botoes;
-}
-
-.botoes__quantidade {
-    background-color: #4563BF;
-    color: #FFFFFF;
-    font-family: "Roboto", sans-serif;
-    font-weight: 900;
-    font-style: normal;
-    font-size: 15pt;
-    display: flex;
-    height: 100%;
-    width: 120px;
-    border-radius: 18px;
-    align-items: center;
-    justify-content: space-evenly;
-    flex-direction: row;
-}
-
-.botoes__quantidade button {
-    background-color: #4563BF;
-    color: #FFFFFF;
-    font-family: "Roboto", sans-serif;
-    font-weight: 900;
-    font-style: normal;
-    font-size: 15pt;
-    align-items: center;
-}
-
-#envio__subtotal {
-    font-size: 24pt;
-}
-
-#envio__adicionarCarrinho {
-    background-color: #4563BF;
-    color: #FFFFFF;
-    font-family: "Roboto", sans-serif;
-    font-weight: 900;
-    font-style: normal;
-    font-size: 15pt;
-    height: 36px;
-    width: 480px;
-    border-radius: 15px;
-}
-
-#envio__adicionarCarrinho:hover {
+button:hover {
     background-color: #2135A6;
 }
 
@@ -213,26 +231,17 @@ footer {
     margin-top: auto;
 }
 
-.menu-sup__usuario li button {
-    background-color: #FFFFFF00;
-    cursor: pointer;
-    color: #2135A6;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 12pt;  
-}
-
-.container__acesso {
+.container__conclusao {
     font-family: "Roboto", sans-serif;
     font-style: normal;
     display: none;
 }
 
-.container__acesso--exibir {
+.container__conclusao--exibir {
     display: flex;
 }
 
-.acesso__planoDeFundo {
+.conclusao__planoDeFundo {
     position: fixed;
     top: 0;
     left: 0;
@@ -240,23 +249,38 @@ footer {
     height: 100%;
     background-color: #FFFFFF90;
     z-index: 999;
-    padding: 120px 240px;
+    padding: 240px 480px;
 }
 
-.acesso__popUp {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+.conclusao__popup {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
     background-color: #F2F2F2;
     width: 100%;
     height: 100%;
     border-radius: 24px;
+    padding: 24px;
     position: relative;
     z-index: 1000;
-    grid-template-areas:
-    "login cadastro";
 }
 
-.acesso__popUp button {
+.popup__mensagem {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    padding-top: 48px;
+}
+
+.popup__mensagem h2 {
+    font-weight: 300;
+    font-style: normal;
+    font-size: 24pt;
+    align-self: center;
+}
+
+.popup__botao {
     background-color: #4563BF;
     padding: 5px 0;
     width: 300px;
@@ -270,11 +294,15 @@ footer {
     font-size: 12pt;
 }
 
+.acesso__popUp button::autofocus {
+    background-color: #2135A6;
+}
+
 .acesso__popUp button:hover {
     background-color: #2135A6;
 }
 
-.acesso__login {
+/* .acesso__login {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -343,4 +371,4 @@ footer {
 
 .popUp__fechar:hover {
     font-weight: 400;
-}
+} */
