--- a/styles/carrinho.css
+++ b/styles/carrinho.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Hind', Arial, Helvetica, sans-serif;
+    font-family: "Roboto", sans-serif;
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
@@ -65,9 +65,9 @@ nav ul li {
 }
 
 main {
-    padding: 0 60px;
     display: grid;
     grid-template-columns: 9fr 3fr;
+    padding: 0 60px;
     gap: 20px;
     grid-template-areas:
     "titulo titulo"
