--- a/styles/vitrine.css
+++ b/styles/vitrine.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Hind', Arial, Helvetica, sans-serif;
+    font-family: "Roboto", sans-serif;
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
