--- a/styles/cadastro.css
+++ b/styles/cadastro.css
@@ -1,3 +1,5 @@
+/* ------------ GERAL ------------ */
+
 * {
     margin: 0;
     padding: 0;
@@ -56,6 +58,8 @@ body {
     font-style: normal;
 }
 
+/* ------------ HEADER ------------ */
+
 header {
     margin: 25px 50px; 
 }
@@ -82,6 +86,8 @@ nav ul {
 nav ul li {
     margin-right: 20px;
 }
+
+/* ------------ CONTEÚDO ------------ */
 
 main {
     flex: 1;
@@ -216,11 +222,14 @@ main {
     font-style: normal;
     font-size: 12pt;
     border: none;
+    cursor: pointer;
 }
 
 button:hover {
     background-color: #2135A6;
 }
+
+/* ------------ FOOTER ------------ */
 
 footer {
     display: flex;
@@ -230,6 +239,8 @@ footer {
     margin: 24px 60px;
     margin-top: auto;
 }
+
+/* ------------ POP UP ------------ */
 
 .container__conclusao {
     font-family: "Roboto", sans-serif;
@@ -301,74 +312,3 @@ footer {
 .acesso__popUp button:hover {
     background-color: #2135A6;
 }
-
-/* .acesso__login {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    padding: 120px 0;
-    border-top-left-radius: 24px;
-    border-bottom-left-radius: 24px;
-    grid-area: login;
-}
-
-.acesso__login form {
-    display: flex;
-    flex-direction: column;
-    row-gap: 15px;
-}
-
-.acesso__login input {
-    display: inline-block;
-    background-color: #F2F2F2;
-    width: 300px;
-    height: 36px;
-    border: 0;
-    border-bottom: 1px solid #4563BF;
-    outline: 0;
-    color: #4563BF;
-    font-family: "Roboto", sans-serif;
-    font-weight: 200;
-    font-style: normal;
-    font-size: 12pt;
-}
-
-.acesso__login input::placeholder {
-    color: #4563BF;
-}
-
-.acesso__login input:focus {
-    border-bottom: 2px solid #4563BF;
-}
-
-.acesso__cadastro {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #7999D9;
-    padding: 120px 0;
-    border-top-right-radius: 24px;
-    border-bottom-right-radius: 24px;
-    grid-area: cadastro;
-}
-
-.popUp__fechar {
-    background-color: #FFFFFF00;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    position: relative;
-    top: 12px;
-    left: calc(50% - 22px);
-    color: #4563BF;
-    font-family: "Roboto", sans-serif;
-    font-weight: 200;
-    font-style: normal;
-    font-size: 12pt;
-}
-
-.popUp__fechar:hover {
-    font-weight: 400;
-} */
