--- a/styles/produto.css
+++ b/styles/produto.css
@@ -230,6 +230,61 @@ footer {
     margin-top: auto;
 }
 
+/* ------------ POP UP GERAL ------------ */
+
+.container__acesso {
+    font-family: "Roboto", sans-serif;
+    font-style: normal;
+    display: none;
+}
+
+.container__acesso--exibir {
+    display: flex;
+}
+
+.acesso__planoDeFundo {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #FFFFFF90;
+    z-index: 999;
+    padding: 120px 240px;
+}
+
+.acesso__popUp {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    background-color: #F2F2F2;
+    width: 100%;
+    height: 100%;
+    border-radius: 24px;
+    position: relative;
+    z-index: 1000;
+    grid-template-areas:
+    "login cadastro";
+}
+
+.popUp__fechar {
+    background-color: #FFFFFF00;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    position: relative;
+    top: 12px;
+    left: calc(50% - 22px);
+    color: #4563BF;
+    font-family: "Roboto", sans-serif;
+    font-weight: 200;
+    font-style: normal;
+    font-size: 12pt;
+}
+
+.popUp__fechar:hover {
+    font-weight: 400;
+}
+
 /* ------------ POP UP CADASTRO ------------ */
 
 .acesso__popUp button {
@@ -404,4 +459,74 @@ padding-top: 36px;
 
 #botoesLogout:hover {
     background-color: #b24c3a;
+}
+
+/* ------------ POP UP CONCLUSÃO ------------ */
+
+.container__conclusao {
+    font-family: "Roboto", sans-serif;
+    font-style: normal;
+    display: none;
+}
+
+.container__conclusao--exibir {
+    display: flex;
+}
+
+.conclusao__planoDeFundo {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #FFFFFF90;
+    z-index: 999;
+    padding: 240px 480px;
+}
+
+.conclusao__popup {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #F2F2F2;
+    width: 100%;
+    height: 100%;
+    border-radius: 24px;
+    padding: 24px;
+    position: relative;
+    z-index: 1000;
+}
+
+.popup__mensagem {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    padding-top: 48px;
+}
+
+.popup__mensagem h2 {
+    font-weight: 300;
+    font-style: normal;
+    font-size: 24pt;
+    align-self: center;
+}
+
+.popup__botao {
+    background-color: #4563BF;
+    padding: 5px 0;
+    width: 300px;
+    height: 36px;
+    border-radius: 12px;
+    align-items: center;
+    color: #FFFFFF;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 12pt;
+}
+
+
+.acesso__popUp button:hover {
+    background-color: #2135A6;
 }
