--- a/styles/carrinho.css
+++ b/styles/carrinho.css
@@ -306,8 +306,19 @@ main {
     height: 100%;    
 }
 
-.endereco__dados span h4{
+.endereco__dados span {
+    display: flex;
+    flex-direction: row;
+}
+
+.endereco__dados span h5{
     font-weight: 100;
+    font-size: 10pt;
+    padding-bottom: 5px;
+}
+
+.endereco__dados span h4{
+    font-weight: 500;
     font-size: 10pt;
     padding-bottom: 5px;
 }
