--- a/styles/cadastro.css
+++ b/styles/cadastro.css
@@ -87,6 +87,15 @@ nav ul li {
     margin-right: 20px;
 }
 
+.menu-sup__usuario li button {
+    background-color: #FFFFFF00;
+    cursor: pointer;
+    color: #2135A6;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 12pt;  
+}
+
 /* ------------ CONTEÚDO ------------ */
 
 main {
