--- a/styles/vitrine.css
+++ b/styles/vitrine.css
@@ -23,10 +23,11 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    padding: 0 60px;
 }
 
 header {
-    margin: 25px 50px; 
+    margin: 25px; 
 }
 
 nav {
@@ -52,8 +53,17 @@ nav ul li {
     margin-right: 20px;
 }
 
+.menu-sup__usuario li button {
+    background-color: #FFFFFF00;
+    cursor: pointer;
+    color: #2135A6;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 12pt;  
+}
+
 main {
-    padding: 20px;
+    padding: 20px 0;
 }
 
 #conteudo__titulo {
@@ -90,7 +100,7 @@ footer {
     flex-direction: row;
     justify-content: flex-end;
     align-content: center;
-    margin: 25px 50px;
+    margin: 25px 0;
 }
 
 /* ------------ POP UP GERAL ------------ */
