--- a/styles/carrinho.css
+++ b/styles/carrinho.css
@@ -58,15 +58,14 @@ nav div {
 nav ul {
     display: flex;
     flex-direction: row;
-    margin-right: -20px;
 }
 
 nav ul li {
-    margin-right: 20px;
+    margin-left: 20px;
 }
 
 .menu-sup__usuario li button {
-    background-color: #FFFFFF00;
+    background-color: #FFFFFF;
     cursor: pointer;
     color: #2135A6;
     font-weight: 400;
