--- a/styles/index.css
+++ b/styles/index.css
@@ -30,7 +30,10 @@ body {
 /* ------------ HEADER ------------ */
 
 header {
-    margin: 25px; 
+    margin-top: 25px;
+    margin-right: 25px;
+    /* [disabled]margin-left: 25px; */
+    margin-bottom: 25px;
 }
 
 nav {
@@ -53,7 +56,7 @@ nav ul {
 }
 
 nav ul li {
-    margin-right: 20px;
+    margin-left: 20px;
 }
 
 .menu-sup__usuario li button {
